After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764404 - hlsdemux: Assertion with AES encrypted stream
hlsdemux: Assertion with AES encrypted stream
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.8.0
Other Linux
: Normal blocker
: 1.8.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-31 09:14 UTC by Sebastian Dröge (slomo)
Modified: 2016-03-31 09:24 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2016-03-31 09:14:59 UTC
$ gst-play-1.0 https://bitdash-a.akamaihd.net/content/art-of-motion_drm/m3u8s/11331.m3u8


ERROR:gstadaptivedemux.c:1095:gst_adaptive_demux_find_stream_for_pad: code should not be reached

Program received signal SIGABRT, Aborted.

Thread 140736546453248 (LWP 8755)

  • #0 __GI_raise
    at ../sysdeps/unix/sysv/linux/raise.c line 55
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
    at /build/glib2.0-2CrUwg/glib2.0-2.48.0/./glib/gtestutils.c line 2429
  • #3 g_assertion_message_expr
    at /build/glib2.0-2CrUwg/glib2.0-2.48.0/./glib/gtestutils.c line 2452
  • #4 gst_adaptive_demux_find_stream_for_pad
    at gstadaptivedemux.c line 1095
  • #5 gst_adaptive_demux_src_event
    at gstadaptivedemux.c line 1441

Comment 1 Sebastian Dröge (slomo) 2016-03-31 09:17:20 UTC
Plays fine with 1.6
Comment 2 Sebastian Dröge (slomo) 2016-03-31 09:19:16 UTC
Happens because in the meantime we switched pads
Comment 3 Sebastian Dröge (slomo) 2016-03-31 09:24:25 UTC
commit 89a318a7a54aeb4c92955c13151b6711295dbb16
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Mar 31 12:20:30 2016 +0300

    adaptivedemux: Handle find_stream_for_pad() without g_assert_not_reached() if no pad is found
    
    Happens e.g. if a RECONFIGURE event is sent from downstream while we're
    switching pads at this very moment. The old pad is gone and the stream has a
    new pad.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=764404