adaptivedemux: Handle find_stream_for_pad() without g_assert_not_reached() if no pad is found

Happens e.g. if a RECONFIGURE event is sent from downstream while we're
switching pads at this very moment. The old pad is gone and the stream has a
new pad.

https://bugzilla.gnome.org/show_bug.cgi?id=764404